add Dataset in class Database

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,6 @@ add_executable(Iventaris_Dan_Keuangan_Konsep
         Main.cpp
         Kasir.cpp
         Kasir.h
+        Database.cpp
+        Database.h
 )
