Add Fitur Menu In Stock

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,9 @@ cmake_minimum_required(VERSION 4.0)
 project(Iventaris_Dan_Keuangan_Konsep)
 
 set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-include_directories(.)
+include_directories(${CMAKE_SOURCE_DIR}/include)
 
 add_executable(Iventaris_Dan_Keuangan_Konsep
         Main.cpp
