Fix code can't run using terminal

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
+configure_file(
+        ${CMAKE_SOURCE_DIR}/Database/database.json
+        ${CMAKE_BINARY_DIR}/Database/database.json
+        COPYONLY
+)
+
 add_executable(Iventaris_Dan_Keuangan_Konsep
         Main.cpp
         Kasir.cpp
