feat: Add PathHelper for auto database path detection and static linking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,11 @@ project(Iventaris_Dan_Keuangan_Konsep)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# Static linking untuk MinGW agar tidak perlu DLL
+if(MINGW)
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static")
+endif()
+
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
 add_executable(Iventaris_Dan_Keuangan_Konsep
@@ -14,4 +19,5 @@ add_executable(Iventaris_Dan_Keuangan_Konsep
         Database.h
         Stock.cpp
         Stock.h
+        PathHelper.h
 )
