feat(keuangan): add transaction recording, financial reports, and CSV export

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,19 +11,32 @@ endif()
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
-configure_file(
-        ${CMAKE_SOURCE_DIR}/Database/database.json
-        ${CMAKE_BINARY_DIR}/Database/database.json
-        COPYONLY
-)
+# Buat folder Database di build directory
+file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/Database)
+
+# Auto-generate database.json dengan isi kosong (hanya jika belum ada)
+if(NOT EXISTS ${CMAKE_BINARY_DIR}/Database/database.json)
+    file(WRITE ${CMAKE_BINARY_DIR}/Database/database.json
+    "{\n    \"barang\": []\n}\n")
+    message(STATUS "Created empty database.json")
+endif()
+
+# Auto-generate transaksi.json dengan isi kosong (hanya jika belum ada)
+if(NOT EXISTS ${CMAKE_BINARY_DIR}/Database/transaksi.json)
+    file(WRITE ${CMAKE_BINARY_DIR}/Database/transaksi.json
+    "{\n    \"transaksi\": []\n}\n")
+    message(STATUS "Created empty transaksi.json")
+endif()
 
 add_executable(Iventaris_Dan_Keuangan_Konsep
         scr/Main.cpp
         scr/Kasir.cpp
         scr/Database.cpp
         scr/Stock.cpp
+        scr/Keuangan.cpp
         header/Kasir.h
         header/Database.h
         header/Stock.h
         header/PathHelper.h
+        header/Keuangan.h
 )
